[package]
name = "asteroids-core"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snorrwe/asteroids"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["launchers/native", "launchers/wasm"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
allow-dirty = ["ci"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The installers to generate for each app
installers = []
# Publish jobs to run in CI
pr-run-mode = "upload"

[workspace.metadata.dist.dependencies.apt]
libasound2-dev = '*'

[profile.release-with-debug]
inherits = "release"
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
fastrand = "2.0.1"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
brengin = { git = "https://github.com/snorrwe/brengin" }

[target.'cfg(target_family = "wasm")'.dependencies]
brengin = { git = "https://github.com/snorrwe/brengin", default-features = false, features = [
    "wasm",
] }
