[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["audio", "parallel"]
audio = ["dep:kira"]
parallel = ["cecs/parallel"]
wasm = ["wgpu/webgl"]

[dependencies]
tracing = { version = "0.1.37" }
cecs = { git = "https://github.com/caolo-game/cecs", default-features = false }
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
fastrand = "1.9.0"
glam = { version = "0.23.0", features = ["bytemuck"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
smallvec = "1.10.0"
wgpu = { version = "0.15.1" }
winit = "0.28.3"
kira = { version = "0.7", optional = true }
instant = { version = "0.1.12", features = ["stdweb", "wasm-bindgen"] }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
